<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_userLogin"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:text="@string/user" />

    <Button
        android:id="@+id/btn_trainerLogin"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:text="@string/trainer" />

</LinearLayout>
